--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"react-redux": "^8.0.4",
 		"react-router-dom": "^6.4.1",
 		"react-scripts": "5.0.1",
+		"react-switch": "^7.0.0",
 		"redux": "^4.2.0",
 		"redux-devtools-extension": "^2.13.9",
 		"redux-saga": "^1.2.1",
