--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@types/react": "^18.0.0",
 		"@types/react-dom": "^18.0.0",
 		"axios": "^1.0.0",
+		"express": "^4.18.2",
 		"formik": "^2.2.9",
 		"polished": "^4.2.2",
 		"react": "^18.2.0",
@@ -32,7 +33,7 @@
 		"yup": "^0.32.11"
 	},
 	"scripts": {
-		"start": "node server.js",
+		"start": "node heroku-server.js",
 		"dev": "craco start",
 		"build": "craco build",
 		"test": "craco test",
@@ -60,6 +61,7 @@
 	},
 	"devDependencies": {
 		"@types/axios": "^0.14.0",
+		"@types/express": "^4.17.14",
 		"@types/react-redux": "^7.1.24",
 		"@types/react-router-dom": "^5.3.3",
 		"@types/redux": "^3.6.0",
